I have created my new icon for Greet-Tweet-Know.  I have also cleaned up all of the sourse code files to remove the references & definitions that where still using Twitux.  I also implemented a few more things gettng me steps closer to using libglade-2.0.  On a very personal not I'm constantly on the edge of breaking down.  I'm forcing myself to do misc stuff any ways but we honestly don't feel like we can take to much more.  Not with every thing that was & how things are now.  & We're thinking about writing my memoir as a graphic novel which is something I really want to do but its still making me think of my past.  Another big road block for me which I've not wanted to share. Its that my current iFrogPad which uses bluetooth has a sleep mode that kicks in if its not used every 15mins.  This is adding stress to me when I go to the lil girls room, think of eating, want to drawn, bath, or anything.  Its adding stress because after it goes into sleep mode I have to press & hold its shift key for 5 seconds to wake it back up & be able to type anything.  Well most of the time when I try to wake it back up it doesn't rebind correctly which mean I have to sit & wait for 2 minutes while it resets before I can try to wake it back up & see if it will rebind.  I usually only have to try this twice but everytime I have to wake it up I truly fear that it won't work again, it won't bind, or something will finally have gone wrong & all of the freedom I've gained thnx to it & my ability to use it.  So I know something that I need to do is to get a usb version.  I believe I have enough saved, mostly from gifts from Marilyn's cousin Janie.  I need to talk to Marilyn about buying this but it would be a huge relief in tons of moments in each day.:

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,14 +1,21 @@
---- Artist(s):
-	*Kaity G. B. <uberChick@uberChicGeekChick.Com>
-		http://uberChicGeekChick.Com/
-		http://twitter.com/uberChick
+Primary OSS Artist & Greet-Tweet-Know's creator:
+Greet-Tweet-Know is Copyright (C) 2009 Kaity G. B. <uberChick@uberChicGeekChick.Com>
+	http://uberChicGeekChick.Com/
+	irc://irc.freenode.org/uberChicks
+	http://twitter.com/uberChick
+
+	I warmly welcome any & all help with Greet-Tweet-Know's design & development.
+	All contributions: programming, debugging, documentation, feedback, and community.
+
+	All open source art, eg design & programming, is being done by:
+	Kaity G. B. <uberChick@uberChicGeekChick.Com>
 
 --- Special Thanks ( Testing, feedback, & etc )
 	*Lord_Drachenblut
 		http://thedigitaldragonslair.com/
 		http://twitter.com/lorddrachenblut
 
----------------------------------------------------------------
+------------------------------------------------------------------------------------------------
 --- Twitux Author
  * Daniel Morales <daniminas@gmail.com>
 
