--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -964,30 +964,30 @@ m4trace:configure.in:101: -1- AC_SUBST_TRACE([HAVE_GNOME_KEYRING_FALSE])
 m4trace:configure.in:101: -1- m4_pattern_allow([^HAVE_GNOME_KEYRING_FALSE$])
 m4trace:configure.in:101: -1- _AM_SUBST_NOTMAKE([HAVE_GNOME_KEYRING_TRUE])
 m4trace:configure.in:101: -1- _AM_SUBST_NOTMAKE([HAVE_GNOME_KEYRING_FALSE])
-m4trace:configure.in:106: -1- AC_SUBST([LIBTWITUX_CFLAGS])
-m4trace:configure.in:106: -1- AC_SUBST_TRACE([LIBTWITUX_CFLAGS])
-m4trace:configure.in:106: -1- m4_pattern_allow([^LIBTWITUX_CFLAGS$])
-m4trace:configure.in:106: -1- AC_SUBST([LIBTWITUX_LIBS])
-m4trace:configure.in:106: -1- AC_SUBST_TRACE([LIBTWITUX_LIBS])
-m4trace:configure.in:106: -1- m4_pattern_allow([^LIBTWITUX_LIBS$])
-m4trace:configure.in:116: -1- AC_SUBST([LIBTWITUX_CFLAGS])
-m4trace:configure.in:116: -1- AC_SUBST_TRACE([LIBTWITUX_CFLAGS])
-m4trace:configure.in:116: -1- m4_pattern_allow([^LIBTWITUX_CFLAGS$])
-m4trace:configure.in:117: -1- AC_SUBST([LIBTWITUX_LIBS])
-m4trace:configure.in:117: -1- AC_SUBST_TRACE([LIBTWITUX_LIBS])
-m4trace:configure.in:117: -1- m4_pattern_allow([^LIBTWITUX_LIBS$])
-m4trace:configure.in:120: -1- AC_SUBST([TWITUX_CFLAGS])
-m4trace:configure.in:120: -1- AC_SUBST_TRACE([TWITUX_CFLAGS])
-m4trace:configure.in:120: -1- m4_pattern_allow([^TWITUX_CFLAGS$])
-m4trace:configure.in:120: -1- AC_SUBST([TWITUX_LIBS])
-m4trace:configure.in:120: -1- AC_SUBST_TRACE([TWITUX_LIBS])
-m4trace:configure.in:120: -1- m4_pattern_allow([^TWITUX_LIBS$])
-m4trace:configure.in:132: -1- AC_SUBST([TWITUX_CFLAGS])
-m4trace:configure.in:132: -1- AC_SUBST_TRACE([TWITUX_CFLAGS])
-m4trace:configure.in:132: -1- m4_pattern_allow([^TWITUX_CFLAGS$])
-m4trace:configure.in:133: -1- AC_SUBST([TWITUX_LIBS])
-m4trace:configure.in:133: -1- AC_SUBST_TRACE([TWITUX_LIBS])
-m4trace:configure.in:133: -1- m4_pattern_allow([^TWITUX_LIBS$])
+m4trace:configure.in:106: -1- AC_SUBST([LIBGREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:106: -1- AC_SUBST_TRACE([LIBGREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:106: -1- m4_pattern_allow([^LIBGREET_TWEET_KNOW_CFLAGS$])
+m4trace:configure.in:106: -1- AC_SUBST([LIBGREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:106: -1- AC_SUBST_TRACE([LIBGREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:106: -1- m4_pattern_allow([^LIBGREET_TWEET_KNOW_LIBS$])
+m4trace:configure.in:116: -1- AC_SUBST([LIBGREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:116: -1- AC_SUBST_TRACE([LIBGREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:116: -1- m4_pattern_allow([^LIBGREET_TWEET_KNOW_CFLAGS$])
+m4trace:configure.in:117: -1- AC_SUBST([LIBGREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:117: -1- AC_SUBST_TRACE([LIBGREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:117: -1- m4_pattern_allow([^LIBGREET_TWEET_KNOW_LIBS$])
+m4trace:configure.in:120: -1- AC_SUBST([GREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:120: -1- AC_SUBST_TRACE([GREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:120: -1- m4_pattern_allow([^GREET_TWEET_KNOW_CFLAGS$])
+m4trace:configure.in:120: -1- AC_SUBST([GREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:120: -1- AC_SUBST_TRACE([GREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:120: -1- m4_pattern_allow([^GREET_TWEET_KNOW_LIBS$])
+m4trace:configure.in:132: -1- AC_SUBST([GREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:132: -1- AC_SUBST_TRACE([GREET_TWEET_KNOW_CFLAGS])
+m4trace:configure.in:132: -1- m4_pattern_allow([^GREET_TWEET_KNOW_CFLAGS$])
+m4trace:configure.in:133: -1- AC_SUBST([GREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:133: -1- AC_SUBST_TRACE([GREET_TWEET_KNOW_LIBS])
+m4trace:configure.in:133: -1- m4_pattern_allow([^GREET_TWEET_KNOW_LIBS$])
 m4trace:configure.in:144: -1- AC_SUBST([ENCHANT_CFLAGS])
 m4trace:configure.in:144: -1- AC_SUBST_TRACE([ENCHANT_CFLAGS])
 m4trace:configure.in:144: -1- m4_pattern_allow([^ENCHANT_CFLAGS$])
