New features: combined view & friend manager.
I'm working on creating a 'view' that will combined tweets from those you follow, direct replies, and direct messages into one view.  I am also adding a dialog that will compare friends & followers.  It will let you see who's following you that you're not following & who you're following who's not following you back.  It'll let you add, remove, block, direct message, and view their statuses.

Greet-Tweet-Know is still currently stable & useable but my new features aren't working 100

Committed on: 2009-03-20 @ 08:58:21 PM

--- a/TODO
+++ b/TODO
@@ -3,5 +3,5 @@
 - Polish existing features, before adding more!
 - After initial timeline retrieval, only retrieve tweets since last retrieval,
   and append those to the gtk_list_store
-- [in progress] Memory profiling of Twitux, it's leaking pretty bad.
+- Add valgrind suppor Greet-Tweet-Know.
 
