--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,6 +1,6 @@
 m4trace:aclocal.m4:8576: -1- m4_include([m4/gnome-doc-utils.m4])
 m4trace:aclocal.m4:8577: -1- m4_include([m4/intltool.m4])
-m4trace:configure.in:1: -1- AC_INIT([Twitux], [0.69], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
+m4trace:configure.in:1: -1- AC_INIT([Greet-Tweet-Know], [0.69], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.in:1: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
