Greet-Tweet-Know 1.0.0a9
I fixed a bug that was reported to me by Elazar, *hugs* & thnx!  I have implemented multiple tweet compositions methods.  Including easier access to sending tweets/status update, direct messages, @ replies, and added the ability to automatically re-tweet.  I have put these all under a new file menu named 'Tweets' all are accessible via various keyboard shortcuts.  For example 'CTNL+@' will start a reply & 'CTNL+F' will let you easily re-tweet the selected tweet.  I have also implimented [Return] modifiers so the varios tweets can be composed by pressing [Return].  Return alone starts a reply, Return+Ctrl starts a new tweet, Alt+Return] retweets, and [Shift+Return] starts a DM.  I want to make this way of sending a DM to auto-select the selected friend, if you can, but for now it only loads the 'Send DM' dialog.

I have added icons for almost all of the menu entries.  I am working on adding a vertical toolbar to Greet-Tweet-Know to provide accoss to the most commonly used functions.

I have a lot of plans for making Greet-Tweet-Know more accessible & much more attractive

I'm still working on my new 'Combined View' and 'Friends Manager'.  Once I have those two functioning than I'll be releasing Greet-Tweet-Know version 1.0.0a1.  My projects versioning system is in an RGBa style.  One because I like it, Its feels cool, & is a way for me to be even more artistic.

Committed on: 2009-03-26 @ 11:37:08 AM

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,7 +10,13 @@ Greet-Tweet-Know is Copyright (C) 2009 Kaity G. B. <uberChick@uberChicGeekChick.
 	All open source art, eg design & programming, is being done by:
 	Kaity G. B. <uberChick@uberChicGeekChick.Com>
 
---- Special Thanks ( Testing, feedback, & etc )
+--------Special Thanks
+	
+
+--------Testing, feedback, & etc )
+	*Elazar
+		http://twitter.com/elazar
+	
 	*Lord_Drachenblut
 		http://thedigitaldragonslair.com/
 		http://twitter.com/lorddrachenblut
