--- a/TODO
+++ b/TODO
@@ -1,22 +1,15 @@
-* To-do
+* TODO
 
-- Implement OAuth *gag*...just do it.
-
-		*Than*
-
-- On timeline reload, reset static index, in 'src/tweet-list.c'->'tweet_list_move', to 0.
 - Improve my network process for requesting multiple pages if possible
 	have it use 'network_queue' and soup's callback to generate the glist.
-	eg. 'src/network.c'->'network_get_users_glist'.
-
-- Finish adding support for multiple service & accounts. Starting with identica, than any laconica instance.
-
-- Add support for Twitter's search API.
-
+	eg. 'src/user.c'->'users_get_users_glist'.
+	
 - Implement 'caching' of xml for friends, followers, & timelines.
 	update them only when there's something new or changed.
-
+	
 - When a new avatar is downloaded have a clean-up method remove old avatars.
 
 - Add 'more' & button for older tweets in timelie
+
+- Add support for Twitter's search API.
 
