get2gnow #0000DDa09 - googly moogly there's a shit load here
Oh goodness I don't even know where to start.  I've made a ton of progress on get2gnow.  I have several new, and very cool new features & a lot of 'shiny' bits added.

I've been extremely sick & trying to post this commit for 4 days.  I'll detail more of what I've done later, I just really want to get this commit up & available.

Committed on: 2009-06-01 @ 11:03:19 AM

--- a/TODO
+++ b/TODO
@@ -1,15 +1,9 @@
 * TODO
 
-- Improve my network process for requesting multiple pages if possible
-	have it use 'network_queue' and soup's callback to generate the glist.
-	eg. 'src/user.c'->'users_get_users_glist'.
-	
 - Implement 'caching' of xml for friends, followers, & timelines.
 	update them only when there's something new or changed.
 	
-- When a new avatar is downloaded have a clean-up method remove old avatars.
-
-- Add 'more' & button for older tweets in timelie
+- Add 'more' & button for older tweets in timelines.
 
 - Add support for Twitter's search API.
 
