get2gnow #0000F6aEC - nows things get fun.
Oh goodness where do I begin...well I'll start by saying I've taken get2gnow to the next level.  I've completely refactored...well almost every thing.

My biggest change is that I've made everything fully OO w/some AO aspects as well.  I've drasticlly improved get2gnow's preformance.

My most noticable change is my rewrite of get2gnow's tweet-list viewer.  get2gnow now supports tabs for each timeline & will auto-matically handle monitoring the timelines.

There's alot here & it all kicks ass...sadly I'm sick again so my detailed write-up will have to wait, except to say that get2gnow is getting to a stage where its truly cool.

Now I'm gonna try to stop shaking, spasming, and crying.  I hope others have fun with get2gnom & I'd love any feed back.

Committed on: 2009-06-18 @ 04:52:22 PM

--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 * TODO
+- *FINISH* implementing support for my timeline tabs pogressbar.
+- 'FINISH' cache_save_xml so it limits the users/statuses that are saved or it'll bloat the hard drive.
+- Add loading & parsing of cached user's friends & followers from cache.
+*w00t!* Caching is finally implemented.
 
-- Implement 'caching' of xml for friends, followers, & timelines.
-	update them only when there's something new or changed.
-	
-- Add 'more' & button for older tweets in timelines.
+- Add support for a 'previous tweets' combo box entry to tweet-view.
 
-- Add support for Twitter's search API.
+- *FINISH* support for Twitter's search.
 
