--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
 * TODO
-- *FINISH* implementing support for my timeline tabs pogressbar.
 - 'FINISH' cache_save_xml so it limits the users/statuses that are saved or it'll bloat the hard drive.
 - Add loading & parsing of cached user's friends & followers from cache.
-*w00t!* Caching is finally implemented.
 
 - Add support for a 'previous tweets' combo box entry to tweet-view.
 
-- *FINISH* support for Twitter's search.
+- Let it die...say good-bye & find the courage to follow my dreams.  w/o a "community" of control.
 
