get2gnow #00EEEDa07
I've done guite a bit more work on get2gnow's new 'best friends' feature.  Along with that I've also improved account setup, & various stablitity tweaks. And an improved build, configure, make, and install process.

I've done a lot of lil stuff & a lot more substantial stuff as well.

I'd kinda like to write about some of it - but I just don't have enough strength.

I'm feeling really really badly right now & I have all day.

I will write about what I'm working on soon enough, especially my game which I have ton a to talk about.

But taking care of 'me 1st' has to come 1st.  My git commit message will have to wait.

I will say ever thing here is all good...given all I have to consider.

Committed on : 2009-08-14 @ 12:52:09 AM

--- a/po/de.po
+++ b/po/de.po
@@ -201,7 +201,7 @@ msgstr "Dieses Programm ist freie Software, Sie können sie weitergeben und/oder
 "Dieses Programm wurde mit dem Ziel veröffentlicht, dass Sie es nützlich finden,\n"
 "jedoch OHNE JEDWEDE GARANTIE, sogar ohne eine implizite Garantie\n"
 "der VERKAUFBARKEIT oder der NUTZBARKEIT FÜR EINEN SPEZIELLEN ZWECK.\n"
-"Schauen Sie für weitere Informationen bitten in der GNU General Public License (GNU GPL) nach.\n"
+"Schauen Sie für weitere Informationen bitten in der GNU General Public License (RPL) nach.\n"
 "\n"
 "Mit diesem Programm sollten Sie außerdem eine Kopie der GNU General Public License erhalten\n"
 "haben. Wenn dem nicht so ist, so schreiben Sie bitte an die\n"
